Initial commit for email notification branch

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1371,6 +1371,7 @@ OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_STARTUP_MAIN_TITLE=System Startup
 OPTIONS_PROXY_MAIN_TITLE=Proxy
 OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale Preferencing
+OPTIONS_MAIL_MAIN_TITLE=Mail
 
 ################################################################################
 # Key/value pairs for the localization options window item
@@ -1380,6 +1381,30 @@ OPTIONS_LOCALIZE_TITLE=International Localization
 OPTIONS_LOCALIZE_LABEL=You can customize LimeWire so that its displays your own language and its usage in your country. The country or territory specified can also be used to locate you on the worldwide network.
 OPTIONS_LOCALIZE_LANGUAGE_BOX_LABEL=Language
 OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Country
+
+################################################################################
+# Key/Value pairs for the Mail option Pane
+################################################################################
+OPTIONS_MAIL_TITLE=Email notification
+OPTIONS_MAIL_LABEL=Configure options to be notified of a finished download by email
+OPTIONS_MAIL_ACTIVE_CHECK_BOX_LABEL=Activate email service
+OPTIONS_MAIL_SMTP_SERVER_NAME_LABEL=SMTP Server Address:
+OPTIONS_MAIL_SMTP_USER_NAME_LABEL=User name:
+OPTIONS_MAIL_SMTP_PASSWORD_LABEL=Password:
+OPTIONS_MAIL_USER_EMAIL_LABEL=Email address:
+OPTIONS_MAIL_FILTER_CHECK_BOX_LABEL=Activate filters
+OPTIONS_MAIL_FILTER_SIZE_TYPE=size
+OPTIONS_MAIL_FILTER_FILE_TYPE=type
+OPTIONS_MAIL_FILTER_NAME_TYPE=name
+OPTIONS_MAIL_FILTER_LABEL=if file
+OPTIONS_MAIL_FILTER_BIGGER_SMALLER_LABEL=is
+OPTIONS_MAIL_FILTER_VALUE_LABEL=
+OPTIONS_MAIL_FILTER_AND=AND
+OPTIONS_MAIL_FILTER_OR=OR
+OPTIONS_MAIL_FILTER_FILE_CONTAINS=contains
+OPTIONS_MAIL_FILTER_FILE_EQUAL=equals
+OPTIONS_MAIL_FILTER_SIZE_BIGGER=bigger than
+OPTIONS_MAIL_FILTER_SIZE_SMALLER=smaller than
 
 ################################################################################
 # Key/value pairs for the save directory options window item
