--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -2376,6 +2376,10 @@ OPTIONS_STARTUP_MAIN_TITLE=Démarrage du système
 OPTIONS_PROXY_MAIN_TITLE=Mandataire (proxy)
 #### OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale Preferencing
 OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale préférée
+#### OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale Preferencing
+OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale préférée
+#### OPTIONS_MAIL_MAIN_TITLE=Mail
+OPTIONS_MAIL_MAIN_TITLE=Mail
 
 ################################################################################
 # Key/value pairs for the localization options window item
@@ -3098,6 +3102,24 @@ OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Autorise l'authentification (ne fonctionn
 OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Utilisateur
 #### OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password:
 OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Mot de passe
+
+################################################################################
+# Key/Value pairs for the Mail option Pane
+################################################################################
+#### OPTIONS_MAIL_TITLE=Email notification
+OPTIONS_MAIL_TITLE=Envoi d'email
+#### OPTIONS_MAIL_LABEL=Configure options to be notified of a finished download by email
+OPTIONS_MAIL_LABEL=Configure les options pour être alerté par email lorsqu'un téléchargement est terminé
+#### OPTIONS_MAIL_ACTIVE_CHECK_BOX_LABEL=Activate email service
+OPTIONS_MAIL_ACTIVE_CHECK_BOX_LABEL=Activer le service d'envoie d'email
+#### OPTIONS_MAIL_SMTP_SERVER_NAME_LABEL=SMTP Server Address:
+OPTIONS_MAIL_SMTP_SERVER_NAME_LABEL=Adresse du serveur SMTP:
+#### OPTIONS_MAIL_SMTP_USER_NAME_LABEL=User name:
+OPTIONS_MAIL_SMTP_USER_NAME_LABEL=Nom d'utilisateur:
+#### OPTIONS_MAIL_SMTP_PASSWORD_LABEL=Password:
+OPTIONS_MAIL_SMTP_PASSWORD_LABEL=Mot de passe:
+#### OPTIONS_MAIL_USER_EMAIL_LABEL=Email address:
+OPTIONS_MAIL_USER_EMAIL_LABEL=Adresse email:
 
 ################################################################################
 # Key/value pairs for top-level stats panels
