Minor update, actual names

--- a/lib/messagebundles/MessagesBundle_bn.properties
+++ b/lib/messagebundles/MessagesBundle_bn.properties
@@ -4,9 +4,9 @@
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=bn
-LOCALE_LANGUAGE_NAME=Bengla
+LOCALE_LANGUAGE_NAME=\u09ac\u09be\u0982\u09b2\u09be
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=Bengla Desh, India
+LOCALE_COUNTRY_NAME=\u09ac\u09be\u0982\u09b2\u09be\u09a6\u09c7\u09b6, \u09ad\u09be\u09b0\u09a4
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Beng
