--- a/lib/messagebundles/MessagesBundle_gu.properties
+++ b/lib/messagebundles/MessagesBundle_gu.properties
@@ -4,9 +4,9 @@
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=gu
-LOCALE_LANGUAGE_NAME=Gujrâtî
+LOCALE_LANGUAGE_NAME=\u0a97\u0ac1\u0a9c\u0ab0\u0abe\u0aa4\u0ac0
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=India
+LOCALE_COUNTRY_NAME=\u0aad\u0abe\u0ab0\u0aa4
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Gujr
