--- a/lib/messagebundles/MessagesBundle_mn.properties
+++ b/lib/messagebundles/MessagesBundle_mn.properties
@@ -4,9 +4,9 @@
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=mn
-LOCALE_LANGUAGE_NAME=\u041c\u043e\u043d\u0433\u043e\u043b
+LOCALE_LANGUAGE_NAME=\u041c\u043e\u043d\u0433\u043e\u043b \u0445\u044d\u043b
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=\u041c\u043e\u043d\u0433\u043e\u043b
+LOCALE_COUNTRY_NAME=\u041c\u043e\u043d\u0433\u043e\u043b \u0443\u043b\u0441
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Cyrl
