--- a/lib/messagebundles/MessagesBundle_mr.properties
+++ b/lib/messagebundles/MessagesBundle_mr.properties
@@ -4,9 +4,9 @@
 # Maintained by the LimeWire project team.
 ################################################################################
 LOCALE_LANGUAGE_CODE=mr
-LOCALE_LANGUAGE_NAME=Marathi
+LOCALE_LANGUAGE_NAME=\u092e\u0930\u093e\u0920\u0940
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=India
+LOCALE_COUNTRY_NAME=\u092d\u093e\u0930\u0924
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Deva
