Minor update, actual names

--- a/lib/messagebundles/MessagesBundle_ta.properties
+++ b/lib/messagebundles/MessagesBundle_ta.properties
@@ -2,11 +2,12 @@
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Tamil - India (& Sri Lanka, Malaysia)
 # Dummy resources bundle for missing translation.
+# Supporting fonts: Latha, <a href="http://www.kamban.com.au/">Akshar Unicode</a>
 ################################################################################
 LOCALE_LANGUAGE_CODE=ta
 LOCALE_LANGUAGE_NAME=\u0ba4\u0bae\u0bbf\u0bb4
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=India
+LOCALE_COUNTRY_NAME=\u0b87\u0ba8\u0bcd\u0ba4\u0bbf\u0baf\u0bbe, \u0b87\u0bb2\u0b99\u0bcd\u0b95\u0bc8
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Taml
