--- a/lib/messagebundles/MessagesBundle_te.properties
+++ b/lib/messagebundles/MessagesBundle_te.properties
@@ -4,9 +4,9 @@
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=te
-LOCALE_LANGUAGE_NAME=Telugu
+LOCALE_LANGUAGE_NAME=\u0c24\u0c46\u0c32\u0c41\u0c17\u0c41
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=India
+LOCALE_COUNTRY_NAME=\u0c2d\u0c3e\u0c30\u0c24 \u0c26\u0c47\u0c33\u0c66
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Telu
