Minor update, actual names

--- a/lib/messagebundles/MessagesBundle_lo.properties
+++ b/lib/messagebundles/MessagesBundle_lo.properties
@@ -2,11 +2,12 @@
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Lao - Lao
 # Dummy resources bundle for missing translation.
+# Supporting fonts: <a href="http://www.laoscript.net/downloads/">Saysettha OT</a>, Arial Unicode MS, <a href="http://home.att.net/~jameskass/">Code2000</a>
 ################################################################################
 LOCALE_LANGUAGE_CODE=lo
-LOCALE_LANGUAGE_NAME=Lao
+LOCALE_LANGUAGE_NAME=\u0ea5\u0eb2\u0ea7
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=Lao
+LOCALE_COUNTRY_NAME=\u0ea5\u0eb2\u0ea7
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Laoo
