--- a/lib/messagebundles/MessagesBundle_ml.properties
+++ b/lib/messagebundles/MessagesBundle_ml.properties
@@ -2,11 +2,12 @@
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Malayalam - India
 # Dummy resources bundle for missing translation.
+# Supporting fonts: Kartika, <a href="http://www.kamban.com.au/">Akshar Unicode</a>, <a href="http://home.att.net/~jameskass/">Code2000</a></i>
 ################################################################################
 LOCALE_LANGUAGE_CODE=ml
-LOCALE_LANGUAGE_NAME=Malayalam
+LOCALE_LANGUAGE_NAME=\u0d2e\u0d32\u0d2f\u0d3e\u0d33\u0d02
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=India
+LOCALE_COUNTRY_NAME=\u0d07\u0d28\u0d4d\u0d24\u0d4d\u0d2f
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Mlym
