Remove HTML for correct rendering of plain text in browser

--- a/lib/messagebundles/MessagesBundle_or.properties
+++ b/lib/messagebundles/MessagesBundle_or.properties
@@ -2,7 +2,7 @@
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Oriya - India
 # Dummy resources bundle for missing translation.
-# Supporting font: <a href="http://www.kamban.com.au/">Akshar Unicode</a>
+# Supporting font: Akshar Unicode (http://www.kamban.com.au)
 # Edited using WordPad in UTF-16 mode.
 ################################################################################
 LOCALE_LANGUAGE_CODE=or
