Minor update, actual names

--- a/lib/messagebundles/MessagesBundle_dv.properties
+++ b/lib/messagebundles/MessagesBundle_dv.properties
@@ -2,11 +2,12 @@
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Divehi (Thaana) - Maldives
 # Dummy resources bundle for missing translation.
+# Supporting fonts: Mv Galan Normal (http://www.mcst.gov.mv/News_and_Events/xpfonts.htm), MV Boli, Code2000 (http://home.att.net/~jameskass/)
 ################################################################################
 LOCALE_LANGUAGE_CODE=dv
-LOCALE_LANGUAGE_NAME=Divehi
+LOCALE_LANGUAGE_NAME=\u078b\u07a8\u0788\u07ac\u0780\u07a8\u0784\u07a6\u0790\u07b0
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=Maldives
+LOCALE_COUNTRY_NAME=\u078b\u07a8\u0788\u07ac\u0780\u07a8 \u0783\u07a7\u0787\u07b0\u0796\u07ac
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Thaa
