--- a/lib/messagebundles/MessagesBundle_bu.properties
+++ b/lib/messagebundles/MessagesBundle_bu.properties
@@ -1,17 +1,17 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
-# Specialization for: Myanmarese (Burmese) - Myanmar
+# Specialization for: Burmese - Myanmar
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=bu
-LOCALE_LANGUAGE_NAME=Myanmarese
+LOCALE_LANGUAGE_NAME=Burmese
 LOCALE_COUNTRY_CODE=
 LOCALE_COUNTRY_NAME=Myanmar
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Mymr
 LOCALE_SCRIPT_NAME=Brahmic (Other Asian)
-LOCALE_ENGLISH_LANGUAGE_NAME=Myanmarese
+LOCALE_ENGLISH_LANGUAGE_NAME=Burmese
 # Before adding a value below, verify the existence of the translation on the NSIS repository:
 # http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 #? LOCALE_NSIS_NAME=
