Minor update, actual names. Separate Ethiopic-based languages from the semitic group.

--- a/lib/messagebundles/MessagesBundle_gez.properties
+++ b/lib/messagebundles/MessagesBundle_gez.properties
@@ -1,6 +1,6 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
-# Specialization for: Geez (Ethiopic) - Ethiopia
+# Specialization for: Geez - Ethiopia
 # Dummy resources bundle for missing translation.
 # Supporting fonts: Ethiopia Jiret (http://www.senamirmir.com/projects/ethiopic/ethiopic.html), Code2000 (http://home.att.net/~jameskass/)
 ################################################################################
@@ -11,8 +11,8 @@ LOCALE_COUNTRY_NAME=\u12a2\u1275\u12ee\u1335\u12eb
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Ethi
-LOCALE_SCRIPT_NAME=Semitic (Other)
-LOCALE_ENGLISH_LANGUAGE_NAME=Geez (Ethiopic)
+LOCALE_SCRIPT_NAME=Ethiopic
+LOCALE_ENGLISH_LANGUAGE_NAME=Geez
 # Before adding a value below, verify the existence of the translation on the NSIS repository:
 # http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 #? LOCALE_NSIS_NAME=
