The NSIS resource "Malaysian.nlf" was renamed to "Malay.nlf" on August 9, 2005.

--- a/lib/messagebundles/MessagesBundle_ms.properties
+++ b/lib/messagebundles/MessagesBundle_ms.properties
@@ -14,7 +14,7 @@ LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=Malay
 # Before adding a value below, verify the existence of the translation on the NSIS repository:
 # http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
-LOCALE_NSIS_NAME=Malaysian
+LOCALE_NSIS_NAME=Malay
 # See also other translatable items for the LimeWire installer:
 # http://www.limewire.org/fisheye/viewrep/limecvs/lib/installbundles/
 
