Final cleanup of Serbian(Latin/Cyrillic)/Bosnian/Croatian

--- a/lib/messagebundles/MessagesBundle_hr.properties
+++ b/lib/messagebundles/MessagesBundle_hr.properties
@@ -1,6 +1,6 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
-# Specialization for: Croatian - Croatia & Bosnia Herzegovina (Latin script)
+# Specialization for: Croatian - Croatia
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=hr
