--- a/lib/messagebundles/MessagesBundle_sr.properties
+++ b/lib/messagebundles/MessagesBundle_sr.properties
@@ -1,17 +1,17 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
-# Specialization for: Serbian (Cyrillic) - Serbia-Montenegro
+# Specialization for: Serbian (Cyrillic) - Serbia & Montenegro
 # Thanks to Borislav Tadic, Nikola Milosavljevic
 ################################################################################
 LOCALE_LANGUAGE_CODE=sr
 LOCALE_LANGUAGE_NAME=\u0421\u0440\u043f\u0441\u043a\u0438
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=\u0421\u0440\u0431\u0438\u0458\u0430-\u0426\u0440\u043d\u0430 \u0413\u043e\u0440\u0430
+LOCALE_COUNTRY_NAME=\u0421\u0440\u0431\u0438\u0458\u0430 \u0438 \u0426\u0440\u043d\u0430 \u0413\u043e\u0440\u0430
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Cyrl
 LOCALE_SCRIPT_NAME=Cyrillic
-LOCALE_ENGLISH_LANGUAGE_NAME=Serbian
+LOCALE_ENGLISH_LANGUAGE_NAME=Serbian (Cyrillic)
 # Before adding a value below, verify the existence of the translation on the NSIS repository:
 # http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 LOCALE_NSIS_NAME=Serbian
