Added GUI message when user tries to share unlicensed files.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -602,6 +602,7 @@ DOWNLOADER_UTILS_ALREADY_IN_LIBRARY=Same File Already In Library
 # Key/value pair for sharing of files specially/individually
 ################################################################################
 SHARE_FILE_POPUP_MENU_LABEL=Share File
+SHARE_FILE_UNLICENSED_MESSAGE=LimeWire can't determine if one or more files have been published under a suitable license.
 UNSHARE_FILE_POPUP_MENU_LABEL=Stop Sharing File
 SHARE_FOLDER_POPUP_MENU_LABEL=Share Folder
 UNSHARE_FOLDER_POPUP_MENU_LABEL=Stop Sharing Folder
