Initial working, but not-yet-pretty version of email download notification. Also added a level of abstraction to the AbstractPaneItem so that previous version is now AbstractTitledPaneItem

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1286,6 +1286,13 @@ ERROR_ITUNES_INTEGRATION=An error has occurred with LimeWire's iTunes integratio
 ERROR_PROPS_CORRUPTED=A file used to save your preferences was corrupted. LimeWire will use default values.
 ERROR_SEARCH_TOO_LARGE=Your search is too long. Please make your search smaller and try again.
 ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
+ERROR_INVALID_MAIL_FILTER_NAME=Invalid filter name. Please enter a valid filter name. The name cannot contain the ; (semicolon) or the | (pipe) character.
+ERROR_INVALID_MAIL_FILTER_CONDITION=Invalid filter condition. Please enter a valid file filter.
+ERROR_INVALID_MAIL_FILTER_SIZE=Invalid filter condition. Please enter a valid number for the file size.
+ERROR_INVALID_MAIL_FILTER_CHARACTER=Invalid filter condition. The filter cannot contain the ; (semicolon) or the | (pipe) character.
+ERROR_INVALID_MAIL_SETTINGS=Please enter an SMTP server and username to enable email notification.
+ERROR_TEST_SMTPSERVER=Error sending test Email.Reason: 
+ERROR_TEST_USERMAIL=Error sending test Email. Please check your email address and try again.
 
 ################################################################################
 # Messages for Licensing
@@ -1371,7 +1378,7 @@ OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_STARTUP_MAIN_TITLE=System Startup
 OPTIONS_PROXY_MAIN_TITLE=Proxy
 OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale Preferencing
-OPTIONS_MAIL_MAIN_TITLE=Mail
+OPTIONS_MAIL_MAIN_TITLE=Notification
 
 ################################################################################
 # Key/value pairs for the localization options window item
@@ -1385,18 +1392,20 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Country
 ################################################################################
 # Key/Value pairs for the Mail option Pane
 ################################################################################
-OPTIONS_MAIL_TITLE=Email notification
-OPTIONS_MAIL_LABEL=Configure options to be notified of a finished download by email
-OPTIONS_MAIL_ACTIVE_CHECK_BOX_LABEL=Activate email service
-OPTIONS_MAIL_SMTP_SERVER_NAME_LABEL=SMTP Server Address:
-OPTIONS_MAIL_SMTP_USER_NAME_LABEL=User name:
+OPTIONS_MAIL_TITLE=Email Notification
+OPTIONS_MAIL_LABEL=You can be notified of a finished download by email.
+OPTIONS_MAIL_ACTIVE_CHECK_BOX_LABEL=Enable Email Notification:
+OPTIONS_MAIL_SMTP_SERVER_NAME_LABEL=SMTP Server:
+OPTIONS_MAIL_SMTP_USER_NAME_LABEL=Username:
 OPTIONS_MAIL_SMTP_PASSWORD_LABEL=Password:
-OPTIONS_MAIL_USER_EMAIL_LABEL=Email address:
-OPTIONS_MAIL_FILTER_CHECK_BOX_LABEL=Activate filters
+OPTIONS_MAIL_TESTCONNECTION=Send Test Email
+OPTIONS_MAIL_USER_EMAIL_LABEL=Email Address:
+OPTIONS_MAIL_FILTER_CHECK_BOX_LABEL=Enable Notification Filters:
+OPTIONS_MAIL_FILTER_NAME=Filter name:
+OPTIONS_MAIL_FILTER_LABEL=Notify me when file:
 OPTIONS_MAIL_FILTER_SIZE_TYPE=size
 OPTIONS_MAIL_FILTER_FILE_TYPE=type
 OPTIONS_MAIL_FILTER_NAME_TYPE=name
-OPTIONS_MAIL_FILTER_LABEL=if file
 OPTIONS_MAIL_FILTER_BIGGER_SMALLER_LABEL=is
 OPTIONS_MAIL_FILTER_VALUE_LABEL=
 OPTIONS_MAIL_FILTER_AND=AND
@@ -1405,6 +1414,18 @@ OPTIONS_MAIL_FILTER_FILE_CONTAINS=contains
 OPTIONS_MAIL_FILTER_FILE_EQUAL=equals
 OPTIONS_MAIL_FILTER_SIZE_BIGGER=bigger than
 OPTIONS_MAIL_FILTER_SIZE_SMALLER=smaller than
+OPTIONS_MAIL_FILTER_FILE_TYPE_IS=is
+OPTIONS_MAIL_FILTER_SIZE_FORMAT=KB
+OPTIONS_MAIL_FILTER_TYPE_FORMAT=(e.g. 'avi' or 'avi,mpeg,mp3')
+OPTIONS_MAIL_TEST_ERROR=Error
+OPTIONS_MAIL_TEST_CONNECTION_OPENED=Connection opened
+OPTIONS_MAIL_TEST_CONNECTION_DISCONNECTED=Disconnected from server
+OPTIONS_MAIL_TEST_TRYING=Trying to connect...
+OPTIONS_MAIL_TEST_DELIVERED=Message delivered
+OPTION_MAIL_FILTERDIALOG_TITLE=Add Notification Filter
+OPTION_MAIL_ADDFILTER=Add Filter
+OPTION_MAIL_REMOVEFILTER=Remove Filter
+OPTION_MAIL_EDITFILTER=Edit Filter
 
 ################################################################################
 # Key/value pairs for the save directory options window item
