Added publisher settings. Created publish dialog skeleton and warning message. LibraryTableMediator now includes publish action.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1029,6 +1029,18 @@ META_EDITOR_MP3_KIND_LABEL=MPEG-1 Audio Layer 3
 META_EDITOR_MP4_KIND_LABEL=MPEG-4 Audio
 META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 
+CC_PUBLISHER_TITLE=Publish License
+CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license. 
+CC_PUBLISHER_WARNING=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
+CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=Copyright Holder:
+CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=Copyright Year:
+CC_PUBLISHER_WORK_TITLE_LABEL=Title of Work:
+CC_PUBLISHER_LICENSE_LABEL=License Class:
+CC_PUBLISHER_LICENSE_CC=Creative Commons
+CC_PUBLISHER_LICENSE_PUBLIC=Public Domain
+CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
+CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
+
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
