New label translated to spanish

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -2949,7 +2949,7 @@ OPTIONS_IGNORE_RESULT_TYPES_HTML_BOX_LABEL=Ignorar archivos .htm/.html
 #### OPTIONS_IGNORE_RESULT_TYPES_VBS_BOX_LABEL=Ignore .vbs Files
 OPTIONS_IGNORE_RESULT_TYPES_VBS_BOX_LABEL=Ignorar archivos .vbs
 #### OPTIONS_IGNORE_RESULT_TYPES_WMV_ASF_BOX_LABEL=Ignore .wmv/.asf files
-#? OPTIONS_IGNORE_RESULT_TYPES_WMV_ASF_BOX_LABEL=
+OPTIONS_IGNORE_RESULT_TYPES_WMV_ASF_BOX_LABEL=Ignorar archivos .wmv/.asf
 
 ################################################################################
 # Key/Value pairs for message filtering options in the options window
