--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1035,12 +1035,15 @@ CC_PUBLISHER_WARNING=I understand that to publish a file, I must either own its 
 CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=Copyright Holder:
 CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=Copyright Year:
 CC_PUBLISHER_WORK_TITLE_LABEL=Title of Work:
-CC_PUBLISHER_LICENSE_LABEL=License Class:
+CC_PUBLISHER_DESCRIPTION_LABEL=Description:
+CC_PUBLISHER_LICENSE_LABEL=License Type:
 CC_PUBLISHER_LICENSE_CC=Creative Commons
 CC_PUBLISHER_LICENSE_PUBLIC=Public Domain
 CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
-
+CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
+CC_PUBLISHER_LICENSE_URL=License URL:
+CC_PUBLISHER_RDF_OUTPUT=License RDF output:
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
