Fixed color bug. Made allow commercial a checkbox. Added (but not implemented yet) rdf generation button.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1043,7 +1043,9 @@ CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
 CC_PUBLISHER_LICENSE_URL=License URL:
-CC_PUBLISHER_RDF_OUTPUT=License RDF output:
+CC_PUBLISHER_RDF_OUTPUT=License verification RDF output:
+CC_PUBLISHER_GENERATE_BUTTON = Generate
+CC_PUBLISHER_CLEAR_BUTTON = Clear
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
@@ -1303,7 +1305,12 @@ ERROR_ITUNES_INTEGRATION=An error has occurred with LimeWire's iTunes integratio
 ERROR_PROPS_CORRUPTED=A file used to save your preferences was corrupted. LimeWire will use default values.
 ERROR_SEARCH_TOO_LARGE=Your search is too long. Please make your search smaller and try again.
 ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
-
+ERROR_CCPUBLISHER_MISSING_TITLE=Please enter the title of the file you want to publish.
+ERROR_CCPUBLISHER_MISSING_YEAR=Please enter the year of the file you want to publish.
+ERROR_CCPUBLISHER_MISSING_HOLDER=Please enter the copyright holder of the file you want to publish.
+ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Please enter the title of the file you want to publish.
+ERROR_CCPUBLISHER_MISSING_URL=Please enter a verification URL for the license.
+ERROR_CCPUBLISHER_MISSING_MODIFICATION=
 ################################################################################
 # Messages for Licensing
 ################################################################################
