CCPublisher tab now functional. License MetaData loading only for license type and URL. Removed 'format' field from PublishedCCLicense. Added License type to getRDFRepresentation(). Added input check to MetaEditor and MetaEditorTabbedPane.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1310,7 +1310,8 @@ ERROR_CCPUBLISHER_MISSING_YEAR=Please enter the year of the file you want to pub
 ERROR_CCPUBLISHER_MISSING_HOLDER=Please enter the copyright holder of the file you want to publish.
 ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Please enter the title of the file you want to publish.
 ERROR_CCPUBLISHER_MISSING_URL=Please enter a verification URL for the license.
-ERROR_CCPUBLISHER_MISSING_MODIFICATION=
+ERROR_CCPUBLISHER_ERROR_URL=Please enter a valid verification URL for the license.
+ERROR_CCPUBLISHER_ERROR_DATE=Please enter a valid year for the file you want to publish.
 ################################################################################
 # Messages for Licensing
 ################################################################################
