--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1031,7 +1031,8 @@ META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 
 CC_PUBLISHER_TITLE=Publish License
 CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license. 
-CC_PUBLISHER_WARNING=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
+CC_PUBLISHER_WARNING_CREATE=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
+CC_PUBLISHER_WARNING_MODIFY=This file allready has a license. If you want to modify it, click the checkbox to attest that you either own its copyrights or are authorized to publish them under a Creative Commons license.
 CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=Copyright Holder:
 CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=Copyright Year:
 CC_PUBLISHER_WORK_TITLE_LABEL=Title of Work:
@@ -1042,10 +1043,12 @@ CC_PUBLISHER_LICENSE_PUBLIC=Public Domain
 CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
-CC_PUBLISHER_LICENSE_URL=License URL:
-CC_PUBLISHER_RDF_OUTPUT=License verification RDF output:
-CC_PUBLISHER_GENERATE_BUTTON = Generate
-CC_PUBLISHER_CLEAR_BUTTON = Clear
+CC_PUBLISHER_LICENSE_URL=Verification URL:
+CC_PUBLISHER_RDF_OUTPUT=Please copy the RDF output below and put it in your verification URL:
+CC_PUBLISHER_GENERATE_BUTTON =Generate
+CC_PUBLISHER_CLEAR_BUTTON =Clear
+CC_PUBLISHER_COPY_BUTTON =Copy to Clipboard
+CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
