--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1033,6 +1033,7 @@ CC_PUBLISHER_TITLE=Publish License
 CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license. 
 CC_PUBLISHER_WARNING_CREATE=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
 CC_PUBLISHER_WARNING_MODIFY=This file allready has a license. If you want to modify it, click the checkbox to attest that you either own its copyrights or are authorized to publish them under a Creative Commons license.
+CC_PUBLISHER_REMOVE_LICENSE_LABEL=Click here to permanently remove the license from this file
 CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=Copyright Holder:
 CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=Copyright Year:
 CC_PUBLISHER_WORK_TITLE_LABEL=Title of Work:
@@ -1049,6 +1050,8 @@ CC_PUBLISHER_GENERATE_BUTTON =Generate
 CC_PUBLISHER_CLEAR_BUTTON =Clear
 CC_PUBLISHER_COPY_BUTTON =Copy to Clipboard
 CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
+CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
+CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permantly remove license.
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
