Changed architecture to put CCPublisher in it's own tabbed pannel. RDF Output now appears in a separate Dialog after the user publishes a file and the corresponging FileEvent is fired. Moved the isFilePublishable method from FileUtils to LimeXMLUtils.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1045,13 +1045,12 @@ CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
 CC_PUBLISHER_LICENSE_URL=Verification URL:
-CC_PUBLISHER_RDF_OUTPUT=Please copy the RDF output below and put it in your verification URL:
-CC_PUBLISHER_GENERATE_BUTTON =Generate
-CC_PUBLISHER_CLEAR_BUTTON =Clear
+CC_PUBLISHER_RDF_OUTPUT=In order to publish your file, please insert the following code in your verification page at:
 CC_PUBLISHER_COPY_BUTTON =Copy to Clipboard
 CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
 CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
 CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permantly remove license.
+CC_RDFOUTPUT_TITLE=License RDF Output
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
