fixed some visual issues & added finish button

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1051,6 +1051,7 @@ CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license 
 CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
 CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permantly remove license.
 CC_RDFOUTPUT_TITLE=License RDF Output
+CC_RDF_FINISH_LABEL=Finish
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
