--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1031,6 +1031,7 @@ META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 
 CC_PUBLISHER_TITLE=Publish License
 CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license. 
+CC_PUBLISHER_URLLABEL=How does it work?
 CC_PUBLISHER_WARNING_CREATE=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
 CC_PUBLISHER_WARNING_MODIFY=This file already has a license. If you want to modify it, click the checkbox to attest that you either own its copyrights or are authorized to publish them under a Creative Commons license.
 CC_PUBLISHER_REMOVE_LICENSE_LABEL=Click here to permanently remove the license from this file
