CC spanish strings

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -871,9 +871,9 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=Comentario...
 #### LIBRARY_ANNOTATE_BUTTON_TIP=Add Description to Selected File
 LIBRARY_ANNOTATE_BUTTON_TIP=Ingresar comentario al archivo seleccionado.
 #### LIBRARY_PUBLISH_BUTTON_LABEL=Publish...
-#? LIBRARY_PUBLISH_BUTTON_LABEL=
+LIBRARY_PUBLISH_BUTTON_LABEL=Publicar
 #### LIBRARY_PUBLISH_BUTTON_TIP=Publish under Creative Commons License
-#? LIBRARY_PUBLISH_BUTTON_TIP=
+LIBRARY_PUBLISH_BUTTON_TIP=Publicar bajo Licencia Creative Commons
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=Reanudar
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
@@ -1791,53 +1791,53 @@ META_EDITOR_MP4_KIND_LABEL=MPEG-4 Audio
 META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 
 #### CC_PUBLISHER_TITLE=Publish License
-#? CC_PUBLISHER_TITLE=
+CC_PUBLISHER_TITLE=Publicar Licencia
 #### CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license. 
-#? CC_PUBLISHER_INTRO=
+CC_PUBLISHER_INTRO=Esta herramienta sirve para publicar audio bajo una licencia Creative Commons.
 #### CC_PUBLISHER_URLLABEL=How does it work?
-#? CC_PUBLISHER_URLLABEL=
+CC_PUBLISHER_URLLABEL=¿Como funciona?
 #### CC_PUBLISHER_WARNING_CREATE=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
-#? CC_PUBLISHER_WARNING_CREATE=
+CC_PUBLISHER_WARNING_CREATE=Entiendo que para publicar un archivo, debo poseer los derechos de copia de autor o estar autorizado para publicarlo bajo una licencia Creative Commons.
 #### CC_PUBLISHER_WARNING_MODIFY=This file already has a license. If you want to modify it, click the checkbox to attest that you either own its copyrights or are authorized to publish them under a Creative Commons license.
-#? CC_PUBLISHER_WARNING_MODIFY=
+CC_PUBLISHER_WARNING_MODIFY=Este archivo ya tiene una licencia. Si quiere modificarla, haga click en la caja de selección para verificar que Ud. posee los derechos de copia de autor o está autorizado para publicarlo bajo una licencia Creative Commons.
 #### CC_PUBLISHER_REMOVE_LICENSE_LABEL=Click here to permanently remove the license from this file
-#? CC_PUBLISHER_REMOVE_LICENSE_LABEL=
+CC_PUBLISHER_REMOVE_LICENSE_LABEL=Haga clic aqui para eliminar permanentemente la licencia de este archivo
 #### CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=Copyright Holder:
-#? CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=
+CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=Dueño de derechos de copia:
 #### CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=Copyright Year:
-#? CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=
+CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=Año de derechos de copia:
 #### CC_PUBLISHER_WORK_TITLE_LABEL=Title of Work:
-#? CC_PUBLISHER_WORK_TITLE_LABEL=
+CC_PUBLISHER_WORK_TITLE_LABEL=Título del Trabajo:
 #### CC_PUBLISHER_DESCRIPTION_LABEL=Description:
-#? CC_PUBLISHER_DESCRIPTION_LABEL=
+CC_PUBLISHER_DESCRIPTION_LABEL=Descripción:
 #### CC_PUBLISHER_LICENSE_LABEL=License Type:
-#? CC_PUBLISHER_LICENSE_LABEL=
+CC_PUBLISHER_LICENSE_LABEL=Tipo de Licencia:
 #### CC_PUBLISHER_LICENSE_CC=Creative Commons
-#? CC_PUBLISHER_LICENSE_CC=
+CC_PUBLISHER_LICENSE_CC=Creative Commons
 #### CC_PUBLISHER_LICENSE_PUBLIC=Public Domain
-#? CC_PUBLISHER_LICENSE_PUBLIC=
+CC_PUBLISHER_LICENSE_PUBLIC=Dominio Público
 #### CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
-#? CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=
+CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=¿Permitirá el uso comercial de su trabajo?
 #### CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
-#? CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=
+CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=¿Permitira modificaciones de su trabajo?
 #### CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
-#? CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=
+CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=Compartido por Igual
 #### CC_PUBLISHER_LICENSE_URL=Verification URL:
-#? CC_PUBLISHER_LICENSE_URL=
+CC_PUBLISHER_LICENSE_URL=URL de Verificación:
 #### CC_PUBLISHER_RDF_OUTPUT=In order to publish your file, please insert the following code in your verification page at:
-#? CC_PUBLISHER_RDF_OUTPUT=
+CC_PUBLISHER_RDF_OUTPUT=Para publicar su archivo, por favor introduzca el siguiente código en su página de verificación en:
 #### CC_PUBLISHER_COPY_BUTTON =Copy to Clipboard
-#? CC_PUBLISHER_COPY_BUTTON =
+CC_PUBLISHER_COPY_BUTTON=Copiar al portapapeles
 #### CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
-#? CC_PUBLISHER_RDFNOTGENERATED_WARNING=
+CC_PUBLISHER_RDFNOTGENERATED_WARNING=Debe generar una licencia RDF actualizada para crear el enlace de verificación para su licencia Creative Commons.\n\n¿Está seguro que desea continuar sin generar la licencia?
 #### CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
-#? CC_PUBLISHER_REMOVELICENSE_LABEL=
+CC_PUBLISHER_REMOVELICENSE_LABEL=¿Esa seguro de que desea eliminar permanentemente la licencia de su copia local de este archivo?
 #### CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permanently remove license.
-#? CC_PUBLISHER_LICENSEREMOVED_LABEL=
+CC_PUBLISHER_LICENSEREMOVED_LABEL=Por favor presione OK para eliminar permanentemente la licencia.
 #### CC_RDFOUTPUT_TITLE=License RDF Output
-#? CC_RDFOUTPUT_TITLE=
+CC_RDFOUTPUT_TITLE=Salida de Licencia RDF
 #### CC_RDF_FINISH_LABEL=Finish
-#? CC_RDF_FINISH_LABEL=
+CC_RDF_FINISH_LABEL=Terminar
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
@@ -2281,19 +2281,19 @@ ERROR_SEARCH_TOO_LARGE=Su búsqueda es muy larga. Por favor reduzca su búsqueda e
 #### ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
 ERROR_XML_SEARCH_TOO_LARGE=Su búsqueda es muy específica. Por favor haga su búsqueda más pequeña e intente de nuevo.
 #### ERROR_CCPUBLISHER_MISSING_TITLE=Please enter the title of the file you want to publish.
-#? ERROR_CCPUBLISHER_MISSING_TITLE=
+ERROR_CCPUBLISHER_MISSING_TITLE=Por favor introduzca el titulo del archivo que desea publicar.
 #### ERROR_CCPUBLISHER_MISSING_YEAR=Please enter the year of the file you want to publish.
-#? ERROR_CCPUBLISHER_MISSING_YEAR=
+ERROR_CCPUBLISHER_MISSING_YEAR=Por favor introduzca el año del archivo que desea publicar.
 #### ERROR_CCPUBLISHER_MISSING_HOLDER=Please enter the copyright holder of the file you want to publish.
-#? ERROR_CCPUBLISHER_MISSING_HOLDER=
+ERROR_CCPUBLISHER_MISSING_HOLDER=Por favor introduzca el dueño de los derechos de copia del archivo que desea publicar.
 #### ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Please enter the title of the file you want to publish.
-#? ERROR_CCPUBLISHER_MISSING_COMMERCIAL=
+ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Por favor introduzca el título del archivo que desea publicar.
 #### ERROR_CCPUBLISHER_MISSING_URL=Please enter a verification URL for the license.
-#? ERROR_CCPUBLISHER_MISSING_URL=
+ERROR_CCPUBLISHER_MISSING_URL=Por favor introduzca una URL de verificación para la licencia.
 #### ERROR_CCPUBLISHER_ERROR_URL=Please enter a valid verification URL for the license.
-#? ERROR_CCPUBLISHER_ERROR_URL=
+ERROR_CCPUBLISHER_ERROR_URL=Por favor introduzca una URL de verificación válida para la licencia.
 #### ERROR_CCPUBLISHER_ERROR_DATE=Please enter a valid year for the file you want to publish.
-#? ERROR_CCPUBLISHER_ERROR_DATE=
+ERROR_CCPUBLISHER_ERROR_DATE=Por favor introduzca un año válido para el archivo de desea publicar.
 ################################################################################
 # Messages for Licensing
 ################################################################################
