--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1831,7 +1831,7 @@ CC_PUBLISHER_COPY_BUTTON=Copiar al portapapeles
 #### CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
 CC_PUBLISHER_RDFNOTGENERATED_WARNING=Debe generar una licencia RDF actualizada para crear el enlace de verificación para su licencia Creative Commons.\n\n¿Está seguro que desea continuar sin generar la licencia?
 #### CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
-CC_PUBLISHER_REMOVELICENSE_LABEL=¿Esa seguro de que desea eliminar permanentemente la licencia de su copia local de este archivo?
+CC_PUBLISHER_REMOVELICENSE_LABEL=¿Está seguro de que desea eliminar permanentemente la licencia de su copia local de este archivo?
 #### CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permanently remove license.
 CC_PUBLISHER_LICENSEREMOVED_LABEL=Por favor presione OK para eliminar permanentemente la licencia.
 #### CC_RDFOUTPUT_TITLE=License RDF Output
