Added a 'What is this?' link to creative commons for the publisher verification URL field

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1031,7 +1031,7 @@ META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 
 CC_PUBLISHER_TITLE=Publish License
 CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license. 
-CC_PUBLISHER_URLLABEL=How does it work?
+CC_PUBLISHER_CC_INTRO_URL_LABEL=How does it work?
 CC_PUBLISHER_WARNING_CREATE=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
 CC_PUBLISHER_WARNING_MODIFY=This file already has a license. If you want to modify it, click the checkbox to attest that you either own its copyrights or are authorized to publish them under a Creative Commons license.
 CC_PUBLISHER_REMOVE_LICENSE_LABEL=Click here to permanently remove the license from this file
@@ -1046,6 +1046,7 @@ CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
 CC_PUBLISHER_LICENSE_URL=Verification URL:
+CC_PUBLISHER_CC_VERIFICATION_URL_LABEL=What is this?
 CC_PUBLISHER_RDF_OUTPUT=In order to publish your file, please insert the following code in your verification page at:
 CC_PUBLISHER_COPY_BUTTON =Copy to Clipboard
 CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
