Added meta-editing for documents,videos,images and programs

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1040,7 +1040,7 @@ META_EDITOR_SHA1_LABEL=SHA1:
 META_EDITOR_PRICE_LABEL=Price:
 META_EDITOR_LINK_LABEL=Link:
 META_EDITOR_ACTION_LABEL=Action:
-META_EDITOR_STARS_LABEL=Stars:
+META_EDITOR_STARS_LABEL=Stars: (Please separate with comma)
 META_EDITOR_LICENSE_LABEL=License:
 META_EDITOR_LICENSETYPE_LABEL=License Type:
 META_EDITOR_VIDEO_LABEL=Video
@@ -1049,8 +1049,8 @@ META_EDITOR_LENGTH_LABEL=Length:
 META_EDITOR_HEIGHT_LABEL=Height:
 META_EDITOR_DIRECTOR_LABEL=Director:
 META_EDITOR_STUDIO_LABEL=Studio:
-META_EDITOR_PRODUCER_LABEL=Producer:
-META_EDITOR_SUBTITLES_LABEL=Subtitles:
+META_EDITOR_PRODUCER_LABEL=Producer: (Please separate with comma)
+META_EDITOR_SUBTITLES_LABEL=Subtitles: (Please separate with comma)
 META_EDITOR_DOCUMENT_LABEL=Document
 META_EDITOR_APPLICATION_LABEL=Application
 META_EDITOR_IMAGE_LABEL=Image
@@ -1059,6 +1059,7 @@ META_EDITOR_AUTHOR_LABEL=Author:
 META_EDITOR_NAME_LABEL=Name:
 META_EDITOR_PUBLISHER_LABEL=Publisher:
 META_EDITOR_DESCRIPTION_LABEL=Description:
+META_EDITOR_PLATFORM_LABEL=Platform:
 
 
 META_EDITOR_SIZE_LABEL=Size:
