Added explore button/action to download page.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -493,6 +493,7 @@ DOWNLOAD_PAUSE_BUTTON_TIP=Pause Selected Downloads
 DOWNLOAD_POPUP_MENU_EDIT_LOCATION_LABEL=Change File Location...
 DOWNLOAD_POPUP_MENU_EDIT_LOCATION_TIP=Edit the Final Filename of the Download
 DOWNLOAD_POPUP_MENU_CLEAR=Clear All Inactive Downloads
+DOWNLOAD_EXPLORE_BUTTON_TIP=Open Folder Containing the File
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Launch
 LIBRARY_LAUNCH_BUTTON_TIP=Launch Selected Files
