--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -711,6 +711,12 @@ DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the Selected Download Closer to Becoming Ac
 DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the Selected Download Further from Becoming Active
 DOWNLOAD_PRIORITY_PRIORITIZE=Queue
 DOWNLOAD_SHOW_FIRST_DOWNLOAD_WARNING=LimeWire is unable to find a license for this file. Download anyway?\n\nPlease note: LimeWire cannot monitor or control the content of the Gnutella network. Please respect your local copyright laws.
+DOWNLOAD_SEARCH_MENU=Search...
+DOWNLOAD_SEARCH_FILENAME_LABEL=Files with this name
+DOWNLOAD_SEARCH_FILENAME_TIP=Searches for files with the same file name.
+DOWNLOAD_SERACH_ORGINAL_LABEL=Orginal query
+DOWNLOAD_SERACH_ORGINAL_TIP=Performs the same search as the one which found this file previously.
+
 
 ###################################################################
 # Key/value pairs for UploadView
