--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.9.2 
+# Messages Bundle for LimeWire 4.9.35
 # Default locale for: English - United States
 # Maintained by the LimeWire project team.
 ################################################################################
@@ -717,7 +717,6 @@ DOWNLOAD_SEARCH_FILENAME_TIP=Searches for files with the same file name.
 DOWNLOAD_SERACH_ORGINAL_LABEL=Orginal query
 DOWNLOAD_SERACH_ORGINAL_TIP=Performs the same search as the one which found this file previously.
 
-
 ###################################################################
 # Key/value pairs for UploadView
 ###################################################################
@@ -1067,8 +1066,6 @@ META_EDITOR_NAME_LABEL=Name:
 META_EDITOR_PUBLISHER_LABEL=Publisher:
 META_EDITOR_DESCRIPTION_LABEL=Description:
 META_EDITOR_PLATFORM_LABEL=Platform:
-
-
 META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_DATE_MODIFIED_LABEL=Date Modified:
 META_EDITOR_KIND_LABEL=Kind:
@@ -1077,7 +1074,7 @@ META_EDITOR_MP4_KIND_LABEL=MPEG-4 Audio
 META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 
 CC_PUBLISHER_TITLE=Publish License
-CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license. 
+CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license.
 CC_PUBLISHER_CC_INTRO_URL_LABEL=How does it work?
 CC_PUBLISHER_WARNING_CREATE=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
 CC_PUBLISHER_WARNING_MODIFY=This file already has a license. If you want to modify it, click the checkbox to attest that you either own its copyrights or are authorized to publish them under a Creative Commons license.
@@ -1095,7 +1092,7 @@ CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
 CC_PUBLISHER_LICENSE_URL=Verification URL:
 CC_PUBLISHER_CC_VERIFICATION_URL_LABEL=What is this?
 CC_PUBLISHER_RDF_OUTPUT=In order to publish your file, please insert the following code in your verification page at:
-CC_PUBLISHER_COPY_BUTTON =Copy to Clipboard
+CC_PUBLISHER_COPY_BUTTON=Copy to Clipboard
 CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
 CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
 CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permanently remove license.
